<?xml version="1.0"?>
<package format="2">
  <name>roshand_gen2_driver</name>
  <version>0.0.0</version>
  <description>The roshand_gen2_driver package</description>

  <maintainer email="support@verma-robot.com">scholar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roshand_gen2_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roshand_gen2_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roshand_gen2_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
